// T043 Knowledge gRPC Server Implementation
// This file implements the gRPC server for knowledge space operations

package grpc

import (
	"context"
	"time"

	"github.com/drewpayment/orbit/services/repository/internal/domain"
	"github.com/drewpayment/orbit/services/repository/internal/service"
	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// Request/Response types for Knowledge operations
// These are placeholder types until we generate from protobuf

type CreateKnowledgeSpaceRequest struct {
	Name        string                 `json:"name"`
	Description string                 `json:"description,omitempty"`
	Type        string                 `json:"type"`
	IsPublic    bool                   `json:"is_public"`
	Metadata    map[string]interface{} `json:"metadata,omitempty"`
}

type CreateKnowledgeSpaceResponse struct {
	Success        bool                   `json:"success"`
	Message        string                 `json:"message"`
	KnowledgeSpace *KnowledgeSpaceDetails `json:"knowledge_space,omitempty"`
}

type GetKnowledgeSpaceRequest struct {
	ID string `json:"id"`
}

type GetKnowledgeSpaceResponse struct {
	Success        bool                   `json:"success"`
	Message        string                 `json:"message"`
	KnowledgeSpace *KnowledgeSpaceDetails `json:"knowledge_space,omitempty"`
}

type ListKnowledgeSpacesRequest struct {
	WorkspaceID string            `json:"workspace_id,omitempty"`
	Type        string            `json:"type,omitempty"`
	IsPublic    *bool             `json:"is_public,omitempty"`
	Limit       int32             `json:"limit,omitempty"`
	Offset      int32             `json:"offset,omitempty"`
	Filters     map[string]string `json:"filters,omitempty"`
}

type ListKnowledgeSpacesResponse struct {
	Success         bool                     `json:"success"`
	Message         string                   `json:"message"`
	KnowledgeSpaces []*KnowledgeSpaceDetails `json:"knowledge_spaces"`
	TotalCount      int64                    `json:"total_count"`
	Page            int32                    `json:"page"`
	PageSize        int32                    `json:"page_size"`
}

type UpdateKnowledgeSpaceRequest struct {
	ID          string                 `json:"id"`
	Name        string                 `json:"name,omitempty"`
	Description string                 `json:"description,omitempty"`
	IsPublic    *bool                  `json:"is_public,omitempty"`
	Metadata    map[string]interface{} `json:"metadata,omitempty"`
}

type UpdateKnowledgeSpaceResponse struct {
	Success        bool                   `json:"success"`
	Message        string                 `json:"message"`
	KnowledgeSpace *KnowledgeSpaceDetails `json:"knowledge_space,omitempty"`
}

type DeleteKnowledgeSpaceRequest struct {
	ID string `json:"id"`
}

type DeleteKnowledgeSpaceResponse struct {
	Success bool   `json:"success"`
	Message string `json:"message"`
}

type AddKnowledgeItemRequest struct {
	KnowledgeSpaceID string                 `json:"knowledge_space_id"`
	Type             string                 `json:"type"`
	Title            string                 `json:"title"`
	Content          string                 `json:"content"`
	Summary          string                 `json:"summary,omitempty"`
	Tags             []string               `json:"tags,omitempty"`
	Metadata         map[string]interface{} `json:"metadata,omitempty"`
	SourceURL        string                 `json:"source_url,omitempty"`
}

type AddKnowledgeItemResponse struct {
	Success       bool                  `json:"success"`
	Message       string                `json:"message"`
	KnowledgeItem *KnowledgeItemDetails `json:"knowledge_item,omitempty"`
}

type SearchKnowledgeRequest struct {
	Query            string            `json:"query"`
	KnowledgeSpaceID string            `json:"knowledge_space_id,omitempty"`
	Type             string            `json:"type,omitempty"`
	Tags             []string          `json:"tags,omitempty"`
	Limit            int32             `json:"limit,omitempty"`
	Filters          map[string]string `json:"filters,omitempty"`
}

type SearchKnowledgeResponse struct {
	Success      bool                     `json:"success"`
	Message      string                   `json:"message"`
	Results      []*KnowledgeSearchResult `json:"results"`
	TotalMatches int64                    `json:"total_matches"`
	SearchTime   int64                    `json:"search_time_ms"`
}

// Detail types
type KnowledgeSpaceDetails struct {
	ID          string                 `json:"id"`
	Name        string                 `json:"name"`
	Description string                 `json:"description"`
	Type        string                 `json:"type"`
	IsPublic    bool                   `json:"is_public"`
	ItemCount   int64                  `json:"item_count"`
	Metadata    map[string]interface{} `json:"metadata"`
	CreatedAt   string                 `json:"created_at"`
	UpdatedAt   string                 `json:"updated_at"`
	CreatedBy   string                 `json:"created_by"`
}

type KnowledgeItemDetails struct {
	ID               string                 `json:"id"`
	KnowledgeSpaceID string                 `json:"knowledge_space_id"`
	Type             string                 `json:"type"`
	Title            string                 `json:"title"`
	Content          string                 `json:"content"`
	Summary          string                 `json:"summary"`
	Tags             []string               `json:"tags"`
	Metadata         map[string]interface{} `json:"metadata"`
	SourceURL        string                 `json:"source_url"`
	CreatedAt        string                 `json:"created_at"`
	UpdatedAt        string                 `json:"updated_at"`
	CreatedBy        string                 `json:"created_by"`
}

type KnowledgeSearchResult struct {
	ID               string                 `json:"id"`
	KnowledgeSpaceID string                 `json:"knowledge_space_id"`
	Type             string                 `json:"type"`
	Title            string                 `json:"title"`
	Summary          string                 `json:"summary"`
	Snippet          string                 `json:"snippet"`
	Score            float64                `json:"score"`
	Tags             []string               `json:"tags"`
	Metadata         map[string]interface{} `json:"metadata"`
	SourceURL        string                 `json:"source_url"`
	CreatedAt        string                 `json:"created_at"`
	UpdatedAt        string                 `json:"updated_at"`
}

// KnowledgeServer handles knowledge space gRPC operations
type KnowledgeServer struct {
	knowledgeService service.KnowledgeSpaceService
	workspaceService service.WorkspaceService
	logger           *Logger // Using custom Logger type for now
}

type Logger struct {
	// Placeholder logger type
}

func (l *Logger) Info(msg string, args ...interface{}) {
	// Placeholder implementation
}

func (l *Logger) Error(msg string, args ...interface{}) {
	// Placeholder implementation
}

func (l *Logger) Warn(msg string, args ...interface{}) {
	// Placeholder implementation
}

// NewKnowledgeServer creates a new knowledge gRPC server
func NewKnowledgeServer(
	knowledgeService service.KnowledgeSpaceService,
	workspaceService service.WorkspaceService,
	logger *Logger,
) *KnowledgeServer {
	return &KnowledgeServer{
		knowledgeService: knowledgeService,
		workspaceService: workspaceService,
		logger:           logger,
	}
}

// CreateKnowledgeSpace creates a new knowledge space
func (s *KnowledgeServer) CreateKnowledgeSpace(ctx context.Context, req *CreateKnowledgeSpaceRequest) (*CreateKnowledgeSpaceResponse, error) {
	s.logger.Info("Creating knowledge space", "name", req.Name, "type", req.Type)

	// Validate request
	if req.Name == "" || req.Type == "" {
		return nil, status.Errorf(codes.InvalidArgument, "name and type are required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Parse workspace ID from context
	workspaceID, err := s.extractWorkspaceID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract workspace ID", "error", err)
		return nil, status.Errorf(codes.InvalidArgument, "workspace ID required: %v", err)
	}

	// Check permissions
	if !s.canCreateKnowledgeSpace(ctx, userID, workspaceID) {
		s.logger.Warn("Insufficient permissions to create knowledge space",
			"user_id", userID, "workspace_id", workspaceID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to create knowledge space")
	}

	// Create service request with only available fields
	serviceReq := service.CreateKnowledgeSpaceRequest{
		WorkspaceID: workspaceID,
		Name:        req.Name,
		Description: req.Description,
		Slug:        req.Name, // Use name as slug for now
		CreatedBy:   userID,
	}

	// Create knowledge space
	knowledgeSpace, err := s.knowledgeService.CreateKnowledgeSpace(ctx, serviceReq)
	if err != nil {
		s.logger.Error("Failed to create knowledge space", "name", req.Name, "error", err)
		return nil, s.handleServiceError(err)
	}

	s.logger.Info("Knowledge space created successfully",
		"id", knowledgeSpace.ID, "name", knowledgeSpace.Name)

	return &CreateKnowledgeSpaceResponse{
		Success:        true,
		Message:        "Knowledge space created successfully",
		KnowledgeSpace: s.convertKnowledgeSpaceToDetails(knowledgeSpace),
	}, nil
}

// GetKnowledgeSpace retrieves a knowledge space by ID (placeholder)
func (s *KnowledgeServer) GetKnowledgeSpace(ctx context.Context, req *GetKnowledgeSpaceRequest) (*GetKnowledgeSpaceResponse, error) {
	s.logger.Info("Getting knowledge space", "id", req.ID)

	// Validate request
	if req.ID == "" {
		return nil, status.Errorf(codes.InvalidArgument, "knowledge space ID is required")
	}

	// Parse knowledge space ID
	_, err := uuid.Parse(req.ID)
	if err != nil {
		s.logger.Error("Invalid knowledge space ID", "id", req.ID, "error", err)
		return nil, status.Errorf(codes.InvalidArgument, "invalid knowledge space ID: %v", err)
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// TODO: Implement actual retrieval when service method is available
	s.logger.Info("Knowledge space retrieval requested", "id", req.ID, "user_id", userID)

	return &GetKnowledgeSpaceResponse{
		Success: true,
		Message: "Knowledge space retrieval placeholder - implementation pending",
		KnowledgeSpace: &KnowledgeSpaceDetails{
			ID:          req.ID,
			Name:        "Placeholder Knowledge Space",
			Description: "This is a placeholder implementation",
			Type:        "documentation",
			IsPublic:    false,
			ItemCount:   0,
			Metadata:    make(map[string]interface{}),
			CreatedAt:   time.Now().Format(time.RFC3339),
			UpdatedAt:   time.Now().Format(time.RFC3339),
			CreatedBy:   userID.String(),
		},
	}, nil
}

// ListKnowledgeSpaces lists knowledge spaces with filtering (placeholder)
func (s *KnowledgeServer) ListKnowledgeSpaces(ctx context.Context, req *ListKnowledgeSpacesRequest) (*ListKnowledgeSpacesResponse, error) {
	s.logger.Info("Listing knowledge spaces")

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Parse workspace ID
	var workspaceID uuid.UUID
	if req.WorkspaceID != "" {
		workspaceID, err = uuid.Parse(req.WorkspaceID)
		if err != nil {
			s.logger.Error("Invalid workspace ID", "workspace_id", req.WorkspaceID, "error", err)
			return nil, status.Errorf(codes.InvalidArgument, "invalid workspace ID: %v", err)
		}
	} else {
		// Extract from context
		workspaceID, err = s.extractWorkspaceID(ctx)
		if err != nil {
			s.logger.Error("Failed to extract workspace ID", "error", err)
			return nil, status.Errorf(codes.InvalidArgument, "workspace ID required: %v", err)
		}
	}

	// TODO: Implement actual listing when service method is available
	s.logger.Info("Knowledge spaces listing requested", "workspace_id", workspaceID, "user_id", userID)

	return &ListKnowledgeSpacesResponse{
		Success:         true,
		Message:         "Knowledge spaces listing placeholder - implementation pending",
		KnowledgeSpaces: []*KnowledgeSpaceDetails{},
		TotalCount:      0, // Placeholder
		Page:            1,
		PageSize:        req.Limit,
	}, nil
}

// UpdateKnowledgeSpace updates an existing knowledge space (placeholder)
func (s *KnowledgeServer) UpdateKnowledgeSpace(ctx context.Context, req *UpdateKnowledgeSpaceRequest) (*UpdateKnowledgeSpaceResponse, error) {
	s.logger.Info("Updating knowledge space", "id", req.ID)

	// Validate request
	if req.ID == "" {
		return nil, status.Errorf(codes.InvalidArgument, "knowledge space ID is required")
	}

	// Parse knowledge space ID
	knowledgeSpaceID, err := uuid.Parse(req.ID)
	if err != nil {
		s.logger.Error("Invalid knowledge space ID", "id", req.ID, "error", err)
		return nil, status.Errorf(codes.InvalidArgument, "invalid knowledge space ID: %v", err)
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions first
	if !s.canUpdateKnowledgeSpace(ctx, userID, knowledgeSpaceID) {
		s.logger.Warn("Insufficient permissions to update knowledge space",
			"user_id", userID, "knowledge_space_id", knowledgeSpaceID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to update knowledge space")
	}

	// TODO: Implement actual update when service method is available
	s.logger.Info("Knowledge space update requested", "id", knowledgeSpaceID, "user_id", userID)

	return &UpdateKnowledgeSpaceResponse{
		Success: true,
		Message: "Knowledge space update placeholder - implementation pending",
		KnowledgeSpace: &KnowledgeSpaceDetails{
			ID:          req.ID,
			Name:        "Updated Knowledge Space",
			Description: "This is a placeholder implementation",
			Type:        "documentation",
			IsPublic:    false,
			ItemCount:   0,
			Metadata:    make(map[string]interface{}),
			CreatedAt:   time.Now().Format(time.RFC3339),
			UpdatedAt:   time.Now().Format(time.RFC3339),
			CreatedBy:   userID.String(),
		},
	}, nil
}

// DeleteKnowledgeSpace deletes a knowledge space (placeholder)
func (s *KnowledgeServer) DeleteKnowledgeSpace(ctx context.Context, req *DeleteKnowledgeSpaceRequest) (*DeleteKnowledgeSpaceResponse, error) {
	s.logger.Info("Deleting knowledge space", "id", req.ID)

	// Validate request
	if req.ID == "" {
		return nil, status.Errorf(codes.InvalidArgument, "knowledge space ID is required")
	}

	// Parse knowledge space ID
	knowledgeSpaceID, err := uuid.Parse(req.ID)
	if err != nil {
		s.logger.Error("Invalid knowledge space ID", "id", req.ID, "error", err)
		return nil, status.Errorf(codes.InvalidArgument, "invalid knowledge space ID: %v", err)
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions
	if !s.canDeleteKnowledgeSpace(ctx, userID, knowledgeSpaceID) {
		s.logger.Warn("Insufficient permissions to delete knowledge space",
			"user_id", userID, "knowledge_space_id", knowledgeSpaceID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to delete knowledge space")
	}

	// TODO: Implement actual deletion when service method is available
	s.logger.Info("Knowledge space deletion requested", "id", knowledgeSpaceID, "user_id", userID)

	return &DeleteKnowledgeSpaceResponse{
		Success: true,
		Message: "Knowledge space deletion placeholder - implementation pending",
	}, nil
}

// AddKnowledgeItem adds an item to a knowledge space
func (s *KnowledgeServer) AddKnowledgeItem(ctx context.Context, req *AddKnowledgeItemRequest) (*AddKnowledgeItemResponse, error) {
	s.logger.Info("Adding knowledge item",
		"knowledge_space_id", req.KnowledgeSpaceID, "type", req.Type, "title", req.Title)

	// Validate request
	if req.KnowledgeSpaceID == "" || req.Type == "" || req.Title == "" || req.Content == "" {
		return nil, status.Errorf(codes.InvalidArgument, "knowledge space ID, type, title, and content are required")
	}

	// Parse knowledge space ID
	knowledgeSpaceID, err := uuid.Parse(req.KnowledgeSpaceID)
	if err != nil {
		s.logger.Error("Invalid knowledge space ID", "knowledge_space_id", req.KnowledgeSpaceID, "error", err)
		return nil, status.Errorf(codes.InvalidArgument, "invalid knowledge space ID: %v", err)
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions
	if !s.canAddKnowledgeItem(ctx, userID, knowledgeSpaceID) {
		s.logger.Warn("Insufficient permissions to add knowledge item",
			"user_id", userID, "knowledge_space_id", knowledgeSpaceID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to add knowledge item")
	}

	// TODO: Implement actual knowledge item creation when service method is available
	s.logger.Info("Knowledge item addition requested",
		"knowledge_space_id", knowledgeSpaceID, "type", req.Type, "user_id", userID)

	return &AddKnowledgeItemResponse{
		Success: true,
		Message: "Knowledge item addition placeholder - implementation pending",
		KnowledgeItem: &KnowledgeItemDetails{
			ID:               uuid.New().String(), // Placeholder
			KnowledgeSpaceID: req.KnowledgeSpaceID,
			Type:             req.Type,
			Title:            req.Title,
			Content:          req.Content,
			Summary:          req.Summary,
			Tags:             req.Tags,
			Metadata:         req.Metadata,
			SourceURL:        req.SourceURL,
			CreatedAt:        time.Now().Format(time.RFC3339),
			UpdatedAt:        time.Now().Format(time.RFC3339),
			CreatedBy:        userID.String(),
		},
	}, nil
}

// SearchKnowledge searches knowledge items across spaces
func (s *KnowledgeServer) SearchKnowledge(ctx context.Context, req *SearchKnowledgeRequest) (*SearchKnowledgeResponse, error) {
	s.logger.Info("Searching knowledge", "query", req.Query)

	// Validate request
	if req.Query == "" {
		return nil, status.Errorf(codes.InvalidArgument, "search query is required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Parse knowledge space ID if provided
	var knowledgeSpaceID *uuid.UUID
	if req.KnowledgeSpaceID != "" {
		ksid, err := uuid.Parse(req.KnowledgeSpaceID)
		if err != nil {
			s.logger.Error("Invalid knowledge space ID", "knowledge_space_id", req.KnowledgeSpaceID, "error", err)
			return nil, status.Errorf(codes.InvalidArgument, "invalid knowledge space ID: %v", err)
		}
		knowledgeSpaceID = &ksid
	}

	// TODO: Implement actual knowledge search when service method is available
	s.logger.Info("Knowledge search requested",
		"query", req.Query, "knowledge_space_id", knowledgeSpaceID, "user_id", userID)

	return &SearchKnowledgeResponse{
		Success:      true,
		Message:      "Knowledge search placeholder - implementation pending",
		Results:      []*KnowledgeSearchResult{},
		TotalMatches: 0,  // Placeholder
		SearchTime:   10, // Placeholder
	}, nil
}

// Helper methods

// extractUserID extracts user ID from gRPC context
func (s *KnowledgeServer) extractUserID(ctx context.Context) (uuid.UUID, error) {
	// TODO: Extract from actual gRPC metadata/JWT token
	// This is a placeholder implementation
	return uuid.New(), nil
}

// extractWorkspaceID extracts workspace ID from gRPC context
func (s *KnowledgeServer) extractWorkspaceID(ctx context.Context) (uuid.UUID, error) {
	// TODO: Extract from actual gRPC metadata/headers
	// This is a placeholder implementation
	return uuid.New(), nil
}

// Permission check methods - placeholders
func (s *KnowledgeServer) canCreateKnowledgeSpace(ctx context.Context, userID, workspaceID uuid.UUID) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *KnowledgeServer) canViewKnowledgeSpace(ctx context.Context, userID uuid.UUID, ks *domain.KnowledgeSpace) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *KnowledgeServer) canUpdateKnowledgeSpace(ctx context.Context, userID, knowledgeSpaceID uuid.UUID) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *KnowledgeServer) canDeleteKnowledgeSpace(ctx context.Context, userID, knowledgeSpaceID uuid.UUID) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *KnowledgeServer) canAddKnowledgeItem(ctx context.Context, userID, knowledgeSpaceID uuid.UUID) bool {
	// TODO: Implement actual permission checking
	return true
}

// convertKnowledgeSpaceToDetails converts domain model to gRPC response format
func (s *KnowledgeServer) convertKnowledgeSpaceToDetails(ks *domain.KnowledgeSpace) *KnowledgeSpaceDetails {
	metadata := make(map[string]interface{})
	// TODO: Add metadata conversion when available in domain

	return &KnowledgeSpaceDetails{
		ID:          ks.ID.String(),
		Name:        ks.Name,
		Description: ks.Description,
		Type:        "documentation", // Placeholder
		IsPublic:    ks.IsPublic(),   // Use method call
		ItemCount:   0,               // Placeholder
		Metadata:    metadata,
		CreatedAt:   ks.CreatedAt.Format(time.RFC3339),
		UpdatedAt:   ks.UpdatedAt.Format(time.RFC3339),
		CreatedBy:   ks.CreatedBy.String(),
	}
}

// handleServiceError converts service errors to gRPC errors
func (s *KnowledgeServer) handleServiceError(err error) error {
	if err == nil {
		return nil
	}

	// Handle different types of service errors
	switch {
	case isDomainError(err, "NOT_FOUND"):
		return status.Errorf(codes.NotFound, "resource not found: %v", err)
	case isDomainError(err, "ALREADY_EXISTS"):
		return status.Errorf(codes.AlreadyExists, "resource already exists: %v", err)
	case isDomainError(err, "INVALID_REQUEST"):
		return status.Errorf(codes.InvalidArgument, "invalid request: %v", err)
	case isDomainError(err, "UNAUTHORIZED"):
		return status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	case isDomainError(err, "FORBIDDEN"):
		return status.Errorf(codes.PermissionDenied, "access denied: %v", err)
	default:
		s.logger.Error("Unhandled service error", "error", err)
		return status.Errorf(codes.Internal, "internal server error")
	}
}

// RegisterServer registers the knowledge server with a gRPC server
func (s *KnowledgeServer) RegisterServer(grpcServer *grpc.Server) {
	// TODO: Register with actual generated protobuf service
	// For now, this is a placeholder
	s.logger.Info("Knowledge gRPC server registered")
}
